Remove useless dependency on commons-codec